--- a/gameengine-dragomerenderer/pom.xml
+++ b/gameengine-dragomerenderer/pom.xml
@@ -76,6 +76,7 @@
       <plugin>
         <groupId>com.dragome</groupId>
         <artifactId>dragome-maven-plugin</artifactId>
+        <version>0.95.2-beta1</version>
         <executions>
           <execution>
             <phase>prepare-package</phase>
