--- a/gameengine-dragomerenderer/pom.xml
+++ b/gameengine-dragomerenderer/pom.xml
@@ -10,17 +10,9 @@
   <name>GameComposer Dragome Renderer</name>
   <packaging>war</packaging>
 
-  <repositories>
-    <repository>
-      <id>JBOSS_NEXUS</id>
-      <url>http://repository.jboss.org/nexus/content/groups/public</url>
-    </repository>
-    <repository>
-      <id>dragome</id>
-      <name>dragome</name>
-      <url>https://raw.github.com/dragome/dragome/master/maven</url>
-    </repository>
-  </repositories>
+  <properties>
+      <dragome.version>0.95.2-beta1</dragome.version>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -38,22 +30,22 @@
     <dependency>
       <groupId>com.dragome</groupId>
       <artifactId>dragome-js-commons</artifactId>
-      <version>0.95.2-beta1</version>
+      <version>${dragome.version}</version>
     </dependency>
     <dependency>
       <groupId>com.dragome</groupId>
       <artifactId>dragome-js-jre</artifactId>
-      <version>0.95.2-beta1</version>
+      <version>${dragome.version}</version>
     </dependency>
     <dependency>
       <groupId>com.dragome</groupId>
       <artifactId>dragome-core</artifactId>
-      <version>0.95.2-beta1</version>
+      <version>${dragome.version}</version>
     </dependency>
     <dependency>
       <groupId>com.dragome</groupId>
       <artifactId>dragome-bytecode-js-compiler</artifactId>
-      <version>0.95.2-beta1</version>
+      <version>${dragome.version}</version>
     </dependency>
     <dependency>
       <groupId>javax</groupId>
@@ -76,7 +68,7 @@
       <plugin>
         <groupId>com.dragome</groupId>
         <artifactId>dragome-maven-plugin</artifactId>
-        <version>0.95.2-beta1</version>
+        <version>${dragome.version}</version>
         <executions>
           <execution>
             <phase>prepare-package</phase>
@@ -136,7 +128,6 @@
             <version>5.0.2</version>
           </dependency>
         </dependencies>
-
       </plugin>
     </plugins>
   </build>
