--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
     <packaging>pom</packaging>
     <name>GameComposer Parent POM</name>
 
+    <properties>
+        <gwt.version>2.7.0</gwt.version>
+    </properties>
+
     <modules>
         <module>gameengine-apt</module>
         <module>gameengine-jbox2d</module>
@@ -131,7 +135,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>gwt-maven-plugin</artifactId>
-                    <version>2.6.1</version>
+                    <version>${gwt.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>com.zenjava</groupId>
