--- a/gameengine-dragomerenderer/pom.xml
+++ b/gameengine-dragomerenderer/pom.xml
@@ -11,7 +11,7 @@
   <packaging>war</packaging>
 
   <properties>
-      <dragome.version>0.95.2-beta1</dragome.version>
+      <dragome.version>0.95.4-MSE-SNAPSHOT</dragome.version>
   </properties>
 
   <dependencies>
