--- a/gameengine-gwtrenderer/pom.xml
+++ b/gameengine-gwtrenderer/pom.xml
@@ -33,7 +33,7 @@
                     <disableCastChecking>true</disableCastChecking>
                     <enableClosureCompiler>false</enableClosureCompiler>
                     <!--<disableClassMetaData>true</disableClassMetaData>-->
-                    <style>DETAILED</style>
+                    <!-- <style>DETAILED</style> -->
                     <!--<disableCastChecking>true</disableCastChecking>-->
                 </configuration>
                 <dependencies>
