More memory for travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 env:
-  - MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=256M"
-  - JAVA_OPTS="-Xmx1024m -XX:MaxPermSize=256M"
+  global:
+    - MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=256M"
+    - JAVA_OPTS="-Xmx1024m -XX:MaxPermSize=256M"
 jdk:
   - oraclejdk8
