--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 env:
   global:
-    - MAVEN_OPTS="-Xmx2048m -XX:MaxPermSize=256M -XX:+CMSClassUnloadingEnabled"
-    - JAVA_OPTS="-Xmx2048m -XX:MaxPermSize=256M -XX:+CMSClassUnloadingEnabled"
+    - MAVEN_OPTS="-Xmx2048m -XX:MaxPermSize=256M -XX:+CMSClassUnloadingEnabled -XX:-UseGCOverheadLimit"
+    - JAVA_OPTS="-Xmx2048m -XX:MaxPermSize=256M -XX:+CMSClassUnloadingEnabled -XX:-UseGCOverheadLimit"
 jdk:
   - oraclejdk8
