--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: java
-env:
-  global:
-    - MAVEN_OPTS="-Xmx2048m -XX:MaxPermSize=256M -XX:+CMSClassUnloadingEnabled -XX:-UseGCOverheadLimit"
-    - JAVA_OPTS="-Xmx2048m -XX:MaxPermSize=256M -XX:+CMSClassUnloadingEnabled -XX:-UseGCOverheadLimit"
 jdk:
   - oraclejdk8
+env:
+  global:
+    - "MAVEN_OPTS=-Xmx2536m -XX:MaxPermSize=1024m -XX:+CMSClassUnloadingEnabled -XX:-UseGCOverheadLimit"
+before-install:
+  - "env"
+  - "echo 'MAVEN_OPTS = $MAVEN_OPTS'"
+script: "mvn clean test"
