--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ jdk:
 env:
   global:
     - "MAVEN_OPTS=-Xmx2536m -XX:MaxPermSize=1024m -XX:+CMSClassUnloadingEnabled -XX:-UseGCOverheadLimit"
-    - "ANDROID_SDKS=android-10"
 before_install:
   - "env"
   - "echo 'MAVEN_OPTS = $MAVEN_OPTS'"
@@ -17,4 +16,5 @@ before_install:
   - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
 
   # Install required Android components.
-  - echo "y" | android update sdk --filter platform-tools,android-16,extra-android-support,$ANDROID_SDKS --no-ui --force
+  - android list sdk
+  - echo "y" | android update sdk --filter platform-tools,android-16,extra-android-support,android-10 --no-ui --force
