--- a/gameengine-teavmrenderer/pom.xml
+++ b/gameengine-teavmrenderer/pom.xml
@@ -110,7 +110,7 @@
                             <sourceMapsGenerated>true</sourceMapsGenerated>
                             <!-- Whether TeaVM should also put source files into output directory,
                                  for compatibility with source maps -->
-                            <sourceFilesCopied>false</sourceFilesCopied>
+                            <sourceFilesCopied>true</sourceFilesCopied>
                         </configuration>
                     </execution>
                 </executions>
