--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
     <packaging>pom</packaging>
     <name>GameComposer Parent POM</name>
 
+    <scm>
+        <url>https://github.com/mirkosertic/GameComposer</url>
+        <connection>scm:git:git://github.com/mirkosertic/GameComposer.git</connection>
+    </scm>
+
     <properties>
         <gwt.version>2.7.0</gwt.version>
     </properties>
@@ -152,6 +157,21 @@
                     <artifactId>modernizer-maven-plugin</artifactId>
                     <version>1.1.0</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>buildnumber-maven-plugin</artifactId>
+                    <version>1.3</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>templating-maven-plugin</artifactId>
+                    <version>1.0-alpha-3</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.pitest</groupId>
+                    <artifactId>pitest-maven</artifactId>
+                    <version>1.1.3</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -166,7 +186,6 @@
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
-                <version>1.1.3</version>
                 <configuration>
                     <targetClasses>
                         <param>de.mirkosertic*</param>
@@ -189,6 +208,24 @@
                     </mutators>
                     <verbose>false</verbose>
                     <threads>4</threads>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <doCheck>false</doCheck>
+                    <doUpdate>true</doUpdate>
+                    <shortRevisionLength>7</shortRevisionLength>
+                    <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
                 </configuration>
             </plugin>
         </plugins>
