Working on #5 platform example

--- a/gamecomposer/pom.xml
+++ b/gamecomposer/pom.xml
@@ -214,5 +214,10 @@
             <type>apk</type>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
