--- a/gameengine-jbox2d/pom.xml
+++ b/gameengine-jbox2d/pom.xml
@@ -39,5 +39,10 @@
             <groupId>de.mirkosertic</groupId>
             <artifactId>gameengine</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
