Working on #6 initial version of gravity example with mouse events and scripting

--- a/gameengine-apt/pom.xml
+++ b/gameengine-apt/pom.xml
@@ -10,6 +10,12 @@
     </parent>
     <artifactId>gameengine-apt</artifactId>
     <name>GameComposer APT Processor for Reflective Class generation</name>
+
+    <scm>
+        <url>https://github.com/mirkosertic/GameComposer</url>
+        <connection>scm:git:git://github.com/mirkosertic/GameComposer.git</connection>
+    </scm>
+
     <build>
         <plugins>
             <plugin>
