--- a/gameengine-teavmrenderer/pom.xml
+++ b/gameengine-teavmrenderer/pom.xml
@@ -10,6 +10,11 @@
     <name>GameComposer TeaVM Renderer</name>
     <packaging>war</packaging>
 
+    <scm>
+        <url>https://github.com/mirkosertic/GameComposer</url>
+        <connection>scm:git:git://github.com/mirkosertic/GameComposer.git</connection>
+    </scm>
+
     <properties>
         <teavm.version>0.2.1</teavm.version>
     </properties>
