--- a/gameengine-dragomerenderer/pom.xml
+++ b/gameengine-dragomerenderer/pom.xml
@@ -11,8 +11,13 @@
     <name>GameComposer Dragome Renderer</name>
     <packaging>war</packaging>
 
+    <scm>
+        <url>https://github.com/mirkosertic/GameComposer</url>
+        <connection>scm:git:git://github.com/mirkosertic/GameComposer.git</connection>
+    </scm>
+
     <properties>
-        <dragome.version>0.95.4-MSE-SNAPSHOT</dragome.version>
+        <dragome.version>0.95.5-beta1</dragome.version>
     </properties>
 
     <dependencies>
@@ -71,7 +76,7 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-            <!--<plugin>
+            <plugin>
               <groupId>com.dragome</groupId>
               <artifactId>dragome-maven-plugin</artifactId>
               <version>${dragome.version}</version>
@@ -98,7 +103,7 @@
                   <version>${project.version}</version>
                 </dependency>
               </dependencies>
-            </plugin>-->
+            </plugin>
 
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
