--- a/gameengine-jbox2d/pom.xml
+++ b/gameengine-jbox2d/pom.xml
@@ -10,6 +10,12 @@
     </parent>
     <artifactId>gameengine-jbox2d</artifactId>
     <name>GameComposer JBox2D Physics Library Implementation</name>
+
+    <scm>
+        <url>https://github.com/mirkosertic/GameComposer</url>
+        <connection>scm:git:git://github.com/mirkosertic/GameComposer.git</connection>
+    </scm>
+
     <build>
         <plugins>
             <plugin>
