Preparing for regular maven releases

--- a/gameengine-gwtrenderer/pom.xml
+++ b/gameengine-gwtrenderer/pom.xml
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>org.parallax3d</groupId>
             <artifactId>parallax-library</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4.1</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
