--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <scm>
         <url>https://github.com/mirkosertic/GameComposer</url>
-        <connection>scm:git:git://github.com/mirkosertic/GameComposer.git</connection>
+        <connection>scm:git:https://github.com/mirkosertic/GameComposer.git</connection>
     </scm>
 
     <properties>
