--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,7 @@
                             <goal>perform</goal>
                         </goals>
                         <configuration>
+                            <pushChanges>false</pushChanges>
                         </configuration>
                     </execution>
                 </executions>
