--- a/gameengine-apt/pom.xml
+++ b/gameengine-apt/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>de.mirkosertic</groupId>
         <artifactId>gamecreator</artifactId>
-        <version>0.3-SNAPSHOT</version>
+        <version>0.3</version>
     </parent>
     <artifactId>gameengine-apt</artifactId>
     <name>GameComposer APT Processor for Reflective Class generation</name>
