--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,11 @@
                     <artifactId>maven-release-plugin</artifactId>
                     <version>2.5.1</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>1.9.1</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
