--- a/gameengine-androidrenderer/pom.xml
+++ b/gameengine-androidrenderer/pom.xml
@@ -19,7 +19,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<platform.version>2.3.3</platform.version>
-		<android.plugin.version>3.7.0</android.plugin.version>
+		<android.plugin.version>4.0.0-rc.2</android.plugin.version>
 	</properties>
 
 	<dependencies>
