--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -17,15 +17,349 @@
         <connection>scm:git:https://github.com/mirkosertic/GameComposer.git</connection>
     </scm>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <executions>
+                    <!-- Bounce example -->
+                    <execution>
+                        <id>bounce_dragome</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>DRAGOME</argument>
+                                <argument>${project.basedir}/bounce</argument>
+                                <argument>${project.build.directory}/games/dragome/bounce</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>bounce_teavm</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>TEAVM</argument>
+                                <argument>${project.basedir}/bounce</argument>
+                                <argument>${project.build.directory}/games/teavm/bounce</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>bounce_gwt</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>GWT</argument>
+                                <argument>${project.basedir}/bounce</argument>
+                                <argument>${project.build.directory}/games/gwt/bounce</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+
+                    <!-- camera example -->
+                    <execution>
+                        <id>camera_dragome</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>DRAGOME</argument>
+                                <argument>${project.basedir}/camera</argument>
+                                <argument>${project.build.directory}/games/dragome/camera</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>camera_teavm</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>TEAVM</argument>
+                                <argument>${project.basedir}/camera</argument>
+                                <argument>${project.build.directory}/games/teavm/camera</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>camera_gwt</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>GWT</argument>
+                                <argument>${project.basedir}/camera</argument>
+                                <argument>${project.build.directory}/games/gwt/camera</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+
+                    <!-- Gravity example -->
+                    <execution>
+                        <id>gravity_dragome</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>DRAGOME</argument>
+                                <argument>${project.basedir}/gravity</argument>
+                                <argument>${project.build.directory}/games/dragome/gravity</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>gravity_teavm</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>TEAVM</argument>
+                                <argument>${project.basedir}/gravity</argument>
+                                <argument>${project.build.directory}/games/teavm/gravity</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>gravity_gwt</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>GWT</argument>
+                                <argument>${project.basedir}/gravity</argument>
+                                <argument>${project.build.directory}/games/gwt/gravity</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+
+                    <!-- networking example -->
+                    <execution>
+                        <id>networking_dragome</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>DRAGOME</argument>
+                                <argument>${project.basedir}/networking</argument>
+                                <argument>${project.build.directory}/games/dragome/networking</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>networking_teavm</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>TEAVM</argument>
+                                <argument>${project.basedir}/networking</argument>
+                                <argument>${project.build.directory}/games/teavm/networking</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>networking_gwt</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>GWT</argument>
+                                <argument>${project.basedir}/networking</argument>
+                                <argument>${project.build.directory}/games/gwt/networking</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+
+                    <!-- platformer example -->
+                    <execution>
+                        <id>platformer_dragome</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>DRAGOME</argument>
+                                <argument>${project.basedir}/platformer</argument>
+                                <argument>${project.build.directory}/games/dragome/platformer</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>platformer_teavm</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>TEAVM</argument>
+                                <argument>${project.basedir}/platformer</argument>
+                                <argument>${project.build.directory}/games/teavm/platformer</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>platformer_gwt</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>GWT</argument>
+                                <argument>${project.basedir}/platformer</argument>
+                                <argument>${project.build.directory}/games/gwt/platformer</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+
+                    <!-- Positiontest example -->
+                    <execution>
+                        <id>positiontest_dragome</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>DRAGOME</argument>
+                                <argument>${project.basedir}/positiontest</argument>
+                                <argument>${project.build.directory}/games/dragome/positiontest</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>positiontest_teavm</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>TEAVM</argument>
+                                <argument>${project.basedir}/positiontest</argument>
+                                <argument>${project.build.directory}/games/teavm/positiontest</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>positiontest_gwt</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>GWT</argument>
+                                <argument>${project.basedir}/positiontest</argument>
+                                <argument>${project.build.directory}/games/gwt/positiontest</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+
+                    <!-- Rotating actor example -->
+                    <execution>
+                        <id>rotatingactor_dragome</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>DRAGOME</argument>
+                                <argument>${project.basedir}/rotatingactor</argument>
+                                <argument>${project.build.directory}/games/dragome/rotatingactor</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>rotatingactor_teavm</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>TEAVM</argument>
+                                <argument>${project.basedir}/rotatingactor</argument>
+                                <argument>${project.build.directory}/games/teavm/rotatingactor</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>rotatingactor_gwt</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>de.mirkosertic.gamecomposer.tools.Main</mainClass>
+                            <arguments>
+                                <argument>GWT</argument>
+                                <argument>${project.basedir}/rotatingactor</argument>
+                                <argument>${project.build.directory}/games/gwt/rotatingactor</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+              </executions>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
-        	<groupId>de.mirkosertic</groupId>
-        	<artifactId>gameengine-fxrenderer</artifactId>
-        </dependency>
-        <dependency>
-        	<groupId>org.codehaus.jackson</groupId>
-        	<artifactId>jackson-mapper-lgpl</artifactId>
-        	<version>1.9.13</version>
+            <groupId>de.mirkosertic</groupId>
+            <artifactId>gameengine-tools</artifactId>
         </dependency>
     </dependencies>
 </project>
