--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>gameengine-dragomerenderer</module>
         <module>gameengine-androidrenderer</module>
         <module>gameengine-teavmrenderer</module>
+        <module>gameengine-tools</module>
         <module>gamecomposer</module>
         <module>examples</module>
     </modules>
@@ -90,6 +91,11 @@
             <dependency>
                 <groupId>de.mirkosertic</groupId>
                 <artifactId>gameengine-fxrenderer</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>de.mirkosertic</groupId>
+                <artifactId>gameengine-tools</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -191,6 +197,11 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
                     <version>1.9.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>1.3.2</version>
                 </plugin>
             </plugins>
         </pluginManagement>
